Add Azure blob integration + 6 hour timer + code cleanup

--- a/AirtableIntegration/local.settings.sample.json
+++ b/AirtableIntegration/local.settings.sample.json
@@ -2,6 +2,8 @@
   "AppKey": "APPKEY",
   "BaseId": "BASEID",
   "TableName": "TABLENAME",
+  "BlobContainerName": "BLOBCONTAINERNAME",
+  "StorageConnectionString": "STORAGECONNECTIONSTRING",
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true",
